# AnyDocsMarked

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: release.yml  test.yml
docs/: README.md  product-requirements.md  release-acceptance-v1.7.0.md
docs/adr/: 0001-lawiki-owns-case-semantics.md
docs/superpowers/plans/: 2026-06-28-makeitdown-dual-ocr-crosscheck.md  2026-06-28-rag-retriever-chunking-hybrid.md  2026-07-05-rag-retriever-batch1.md  2026-07-06-lawiki-graph-tool.md  2026-07-06-makeitdown-image-placeholder.md  2026-07-08-offline-embedding-bundle.md  2026-07-10-lawiki-qa-gates.md  2026-07-10-offline-hardening-and-long-task-observability.md  2026-07-13-ingest-completeness-gates.md  2026-07-15-rag-retriever-min-score.md  2026-07-15-rag-retriever-parent-context.md
docs/superpowers/specs/: 2026-06-28-rag-ocr-revision-design.md  2026-07-05-rag-retriever-batch1-rerank-and-filter-design.md  2026-07-06-lawiki-graph-tool-design.md  2026-07-06-makeitdown-image-placeholder-design.md  (+6 more)
lawiki/: README.md  install.py  test_install.py
lawiki/docs/: exploration-log.md
lawiki/scripts/: build_bundle.py  test_build_bundle.py
makeitdown/: LICENSE  README.md  pyproject.toml
makeitdown/docs/superpowers/plans/: 2026-06-29-cloud-default-ocr-and-mineru.md
makeitdown/docs/superpowers/specs/: 2026-06-29-cloud-default-ocr-and-mineru.md
makeitdown/skill/makeitdown/: SKILL.md
makeitdown/src/makeitdown/: cli.py  cloud_consent.py  convert_native.py  convert_ocr.py  frontmatter.py  models.py  ocr_cloud.py  ocr_crosscheck.py  ocr_mineru.py  ocr_rotate.py  pipeline.py  quality.py  router.py  structure.py
makeitdown/tests/: test_cli.py  test_cloud_consent.py  test_convert_native.py  test_convert_ocr.py  test_frontmatter.py  test_ocr_cloud.py  test_ocr_crosscheck.py  test_ocr_local.py  test_ocr_mineru.py  test_ocr_rotate.py  test_pipeline.py  test_router.py  test_structure.py
rag-retriever/: .env.example  .gitignore  README.md  pyproject.toml
rag-retriever/rag_retriever/: __init__.py  chunk.py  cli.py  config.py  embed.py  extract.py  frontmatter.py  pipeline.py  rerank.py  server.py  store.py  tokenize.py
rag-retriever/scripts/: fetch_bundled_model.py
rag-retriever/testdocs/: it.txt  sample.txt
rag-retriever/tests/: conftest.py  test_chunk.py  test_cli.py  test_config.py  test_embed_batching.py  test_embed_offline.py  test_exclude.py  test_index_robustness.py  test_metadata.py  test_pipeline.py  test_rerank.py  test_source_root.py  test_stats.py  test_store.py  test_store_integrity.py  test_tokenize.py
tests/: test_product_acceptance.py
(+23 files in other folders)
