[project]
name = "rag-retriever"
# Tracks the AnyDocsMarked bundle release tag (vX.Y.Z); bump together when tagging.
version = "1.3.0"
description = "A lightweight, local-first document retrieval engine that mounts to an agent as an MCP tool. Drop files in; the agent searches and answers with its own LLM."
readme = "README.md"
license = { text = "MIT" }
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",            # MCP server (FastMCP)
    "lancedb>=0.15.0",       # embedded vector store (no server)
    "jieba>=0.42",           # pure-python Chinese segmentation for BM25 (offline)
    "markitdown[all]>=0.0.1a3",  # file -> markdown extraction (pdf/docx/pptx/xlsx/html/...)
    "fastembed>=0.4.0",      # local in-process embeddings (ONNX, no torch)
    "httpx>=0.27.0",         # ollama / openai-compatible HTTP calls
    "tiktoken>=0.7.0",       # token-based chunking
    "numpy>=1.26",
]

[project.scripts]
rag-retriever = "rag_retriever.cli:main"
rag-retriever-mcp = "rag_retriever.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_retriever"]
# The vendored offline assets (embedding ONNX + tiktoken BPE, fetched by
# scripts/fetch_bundled_model.py) are git-ignored to keep the repo lean, so
# force-include them in the release wheel.
artifacts = ["rag_retriever/_models/**", "rag_retriever/_tiktoken/**"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
